[gd_scene load_steps=3 format=3 uid="uid://bqycolxnm2itr"]

[ext_resource type="Script" uid="uid://bw5ia68itg64f" path="res://Scripts/linked_list_room.gd" id="1_uu4pd"]
[ext_resource type="PackedScene" uid="uid://b0ulf0kk4brdv" path="res://Scenes/linked_list_item.tscn" id="2_82w46"]

[node name="LinkedListRoom" type="Node2D"]
script = ExtResource("1_uu4pd")
linked_list_item_scene = ExtResource("2_82w46")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
color = Color(0.059126, 0.0591259, 0.0591259, 1)

[node name="UIControls" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UIControls"]
offset_right = 40.0
offset_bottom = 40.0

[node name="LinkedListInfoLabel" type="Label" parent="UIControls/VBoxContainer"]
layout_mode = 2
text = "Linked List: []"

[node name="HBoxContainer" type="HBoxContainer" parent="UIControls/VBoxContainer"]
layout_mode = 2

[node name="InsertHeadButton" type="Button" parent="UIControls/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Insert at head"

[node name="InsertTailButton" type="Button" parent="UIControls/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Insert at Tail
"

[node name="DeleteValueButton" type="Button" parent="UIControls/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Delete Value"

[node name="DeleteValueInput" type="LineEdit" parent="UIControls/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "Value to Delete"

[node name="InsertRandomValue" type="Button" parent="UIControls/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Insert Random Value"

[node name="ListDisplayContainer" type="HBoxContainer" parent="."]
offset_left = 50.0
offset_top = 200.0
offset_right = 50.0
offset_bottom = 200.0
